// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Previous Cities component Should render previous cities correctly after searching for more than one city 1`] = `
<div
  className="localContainer lengthTwo"
>
  <button
    className="localStorage"
    key="Helsinki"
    onClick={[Function]}
    type="button"
  >
    Helsinki
  </button>
  <button
    className="localStorage"
    key="Istanbul"
    onClick={[Function]}
    type="button"
  >
    Istanbul
  </button>
</div>
`;

exports[`Previous Cities component Should render previous cities on mount correctly 1`] = `
<div
  className="localContainer lengthMore"
>
  <button
    className="localStorage"
    key="Helsinki"
    onClick={[Function]}
    type="button"
  >
    Helsinki
  </button>
</div>
`;
